--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
     implementation 'androidx.activity:activity-compose:1.5.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
