--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
 
+    //для инициализации gameViewModel: GameViewModel = viewModel() в GameScreen
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
     implementation 'androidx.activity:activity-compose:1.5.1'
